--- a/base/templates/base/activity.html
+++ b/base/templates/base/activity.html
@@ -21,7 +21,7 @@
 
       <div class="activities-page layout__body">
 
-        {% for message in room_messages %}
+        {% for message in blog_messages %}
         <div class="activities__box">
           <div class="activities__boxHeader roomListRoom__header">
             <a href="{% url 'user-profile' message.user.id %}" class="roomListRoom__author">
@@ -49,7 +49,7 @@
 
           </div>
           <div class="activities__boxContent">
-            <p>replied to post “<a href="{% url 'room' message.room.id %}">{{message.room}}</a>”</p>
+            <p>replied to post “<a href="{% url 'blog' message.blog.id %}">{{message.blog}}</a>”</p>
             <div class="activities__boxRoomContent">
               {{message.body}}
             </div>
