--- a/base/templates/base/home_old.html
+++ b/base/templates/base/home_old.html
@@ -17,8 +17,8 @@
     </div>
 
     <div>
-        <h5>{{room_count}} rooms available</h5>
-        <a href="{% url 'create-room' %}">Create Room</a>
+        <h5>{{blog_count}} blogs available</h5>
+        <a href="{% url 'create-room' %}">Create Blog</a>
 
         {% include 'base/feed_component.html' %}
 
