--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="layout__body">
-        <h2 class="auth__tagline">Find your study partner</h2>
+        <h2 class="auth__tagline">Find related blogs</h2>
 
         <form class="form" action="" method="POST">
           {% csrf_token %}
@@ -66,6 +66,7 @@
           <div class="form__group form__group">
             <label for="room_name">{{field.label}}</label>
             {{field}}
+            {{field.errors}}
           </div>
           {% endfor %}
 
