--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -1,21 +1,21 @@
-{% for room in rooms %}
+{% for blog in blogs %}
 <div class="roomListRoom">
     <div class="roomListRoom__header">
-        <a href="{% url 'user-profile' room.host.id %}" class="roomListRoom__author">
+        <a href="{% url 'user-profile' blog.host.id %}" class="roomListRoom__author">
             <div class="avatar avatar--small">
-                <img src="{{room.host.avatar.url}}" />
+                <img src="{{blog.host.avatar.url}}" />
             </div>
-            <span>@{{room.host.username}}</span>
+            <span>@{{blog.host.username}}</span>
         </a>
         <div class="roomListRoom__actions">
-            <span>{{room.created|timesince}} ago</span>
+            <span>{{blog.created|timesince}} ago</span>
         </div>
     </div>
     <div class="roomListRoom__content">
-        <a href="{% url 'room' room.id %}">{{room.name}}</a>
+        <a href="{% url 'blog' blog.id %}">{{blog.name}}</a>
     </div>
     <div class="roomListRoom__meta">
-        <a href="{% url 'room' room.id %}" class="roomListRoom__joined">
+        <a href="{% url 'blog' blog.id %}" class="roomListRoom__joined">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                 <title>user-group</title>
                 <path
@@ -31,9 +31,9 @@
                     d="M12 16c3.859 0 7-3.141 7-7s-3.141-7-7-7c-3.859 0-7 3.141-7 7s3.141 7 7 7zM12 4c2.757 0 5 2.243 5 5s-2.243 5-5 5-5-2.243-5-5c0-2.757 2.243-5 5-5z">
                 </path>
             </svg>
-            {{room.participants.all.count}} Joined
+            {{blog.participants.all.count}} Joined
         </a>
-        <p class="roomListRoom__topic">{{room.topic.name}}</p>
+        <p class="roomListRoom__topic">{{blog.topic.name}}</p>
     </div>
 </div>
 {% endfor %}
