--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -32,18 +32,18 @@
 
       <div class="roomList__header">
         <div>
-          <h2>Study Rooms</h2>
-          <p>{{room_count}} Rooms available</p>
+          <h2>Blog Rooms</h2>
+          <p>{{blog_count}} Blogs available</p>
         </div>
 
-        <a class="btn btn--main" href="{% url 'create-room' %}">
+        <a class="btn btn--main" href="{% url 'create-blog' %}">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
             <title>add</title>
             <path
               d="M16.943 0.943h-1.885v14.115h-14.115v1.885h14.115v14.115h1.885v-14.115h14.115v-1.885h-14.115v-14.115z">
             </path>
           </svg>
-          Create Room
+          Create Blog
         </a>
       </div>
 
